Runs draw on load

--- a/graph-editor.html
+++ b/graph-editor.html
@@ -25,7 +25,7 @@
     }
   </style>
 </head>
-<body>
+<body onload="draw()">
   <div id="toolbar">
     <button class="mode-button" onclick="setMode('create')">Create Mode</button>
     <button class="mode-button" onclick="setMode('delete')">Delete Mode</button>
@@ -251,8 +251,7 @@
       }
     }
   }
-    
-    draw();
+  
   </script>
 </body>
 </html>
