--- a/graph-editor.html
+++ b/graph-editor.html
@@ -32,6 +32,8 @@
     <button class="mode-button" onclick="toMathematica()">Export to Mathematica</button>
     <input type="number" id="cycleSize" min="3" placeholder="Cycle size" />
     <button class="mode-button" onclick="createCycle()">Create Cycle</button>
+    <label for="spread-on">Auto Spread:</label>
+    <input id="spread-on" type="checkbox" checked>
   </div>
   <canvas id="graphCanvas" width="800" height="600"></canvas>
   <p id="output"></p>
@@ -139,7 +141,8 @@
     }
 
     function draw() {
-      spread();
+      if (document.getElementById("spread-on").checked)
+        spread();
       
       ctx.clearRect(0, 0, canvas.width, canvas.height);
 
