Resized cycle input

--- a/graph-editor.html
+++ b/graph-editor.html
@@ -30,7 +30,7 @@
     <button class="mode-button" onclick="setMode('create')">Create Mode</button>
     <button class="mode-button" onclick="setMode('delete')">Delete Mode</button>
     <button class="mode-button" onclick="toMathematica()">Export to Mathematica</button>
-    <input type="number" id="cycleSize" min="3" placeholder="Cycle size" />
+    <input type="text" id="cycleSize" min="3" size="4" placeholder="Size" />
     <button class="mode-button" onclick="createCycle()">Create Cycle</button>
     <label for="spread-on">Auto Spread:</label>
     <input id="spread-on" type="checkbox" checked>
